# pinentry-box

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  flake.nix
common/: flake.nix
pinentry-bitwarden/: .envrc  Cargo.toml  Makefile  README.md  flake.nix
pinentry-bitwarden/examples/: test_assuan_client.rs  test_bitwarden_connect.rs  test_gpg_agent.rs
pinentry-bitwarden/src/: assuan_server.rs  config.rs  lib.rs  main.rs
pinentry-box/: .devshell  .envrc  .pinentry-box.yaml  .pinentry.out  DOCS.md  Makefile  README.md  flake.nix  pyproject.toml  testfile.txt
pinentry-box/docs/: how-to-test.md
pinentry-box/pinentry_box/: cli.py  config.py  proxy_assuan_server.py
