[package]
name = "pinentry-bitwarden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitwarden = { git="https://github.com/bitwarden/sdk", version = "0.3.1", features = ["secrets"] }
uuid = "1.6.1"
tokio = { version = "1.35.0", features = ["macros"]}
sequoia-ipc = { version = "0.31.0" }
sequoia-openpgp = { version = "1.17.0", features = ["crypto-openssl"], default-features = false }
gpg-error = { git = "https://github.com/rehar/libgpg-error.git", version = "0.6.0" }
clap = { version = "4.4.11", features = ["derive", "env", "string", "wrap_help"] }
futures = "0.3.29"


[features]
internal = ["bitwarden/internal"]
mobile = ["bitwarden/mobile"]
